Rename image to thumbnail, for files that actually described thumbnails. Also fix some layout issues, make layout more mobile friendly.

--- a/fotogalleri/gallery/static/css/components/breadcrumb.css
+++ b/fotogalleri/gallery/static/css/components/breadcrumb.css
@@ -6,7 +6,7 @@
 
 .breadcrumb a {
     color: var(--teknolog-rod);
-    font-weight: 300;
+    font-weight: 400;
     letter-spacing: 0.03em;
 }
 
