--- a/fotogalleri/gallery/static/css/image.css
+++ b/fotogalleri/gallery/static/css/image.css
@@ -18,7 +18,7 @@ body {
     display: block;
 }
 
-#imgcontainer {
+.imgcontainer {
     max-height: 100vh;
     max-width: 100vw;
     display: block;
